# backend

./: Dockerfile  docker-compose.yaml  pyproject.toml
.envs/prod/web/: app.env
src/: config.py  crud.py  database.py  email_config.py  main.py  models.py  schemas.py  send_email.py
