[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Michał Wrona <wronamichal01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
black = "^23.11.0"
isort = "^5.12.0"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.6"
aspose-cells = "^23.11.0"
fastapi-mail = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
